Import of LEONT/PerlIO-utf8_strict-0.005.tar.gz from CPAN.
gitpan-cpan-distribution: PerlIO-utf8_strict
gitpan-cpan-version:      0.005
gitpan-cpan-path:         LEONT/PerlIO-utf8_strict-0.005.tar.gz
gitpan-cpan-author:       LEONT
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -5,4 +5,7 @@ license = Perl_5
 copyright_holder = Leon Timmermans, Christian Hansen
 copyright_year   = 2012
 
-[@LEONT::XS]
+[@LEONT]
+install_tool = mb
+[PPPort]
+style = ModuleBuild
