--- a/META.yml
+++ b/META.yml
@@ -4,31 +4,37 @@ author:
   - 'Leon Timmermans <leont@cpan.org>'
   - 'Christian Hansen <chansen@cpan.org>'
 build_requires:
-  Carp: 0
-  Exporter: 0
-  File::Find: 0
-  File::Spec::Functions: 0
-  File::Temp: 0
-  IO::File: 0
-  Module::Build: 0.3601
-  Test::Exception: 0
-  Test::More: 0.88
-  utf8: 0
+  Carp: '0'
+  Exporter: '0'
+  File::Spec: '0'
+  File::Spec::Functions: '0'
+  IO::File: '0'
+  IO::Handle: '0'
+  IPC::Open3: '0'
+  Module::Build: '0.28'
+  Test::Exception: '0'
+  Test::More: '0.88'
+  perl: '5.008'
+  utf8: '0'
 configure_requires:
-  Module::Build: 0.3601
+  Module::Build: '0.28'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300028, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 5.021, CPAN::Meta::Converter version 2.142690'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: PerlIO-utf8_strict
+provides:
+  PerlIO::utf8_strict:
+    file: lib/PerlIO/utf8_strict.pm
+    version: '0.005'
 requires:
-  XSLoader: 0
-  perl: 5.008
-  strict: 0
-  warnings: 0
+  XSLoader: '0'
+  perl: '5.008'
+  strict: '0'
+  warnings: '0'
 resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=PerlIO-utf8_strict
   repository: git://github.com/Leont/perlio-utf8_strict.git
-version: 0.004
+version: '0.005'
