Import of LEONT/PerlIO-utf8_strict-0.006.tar.gz from CPAN.
gitpan-cpan-distribution: PerlIO-utf8_strict
gitpan-cpan-version:      0.006
gitpan-cpan-path:         LEONT/PerlIO-utf8_strict-0.006.tar.gz
gitpan-cpan-author:       LEONT
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,6 @@ copyright_holder = Leon Timmermans, Christian Hansen
 copyright_year   = 2012
 
 [@LEONT]
-install_tool = mb
+install_tool = eumm
 [PPPort]
-style = ModuleBuild
+style = MakeMaker
