--- a/META.yml
+++ b/META.yml
@@ -6,20 +6,15 @@ author:
 build_requires:
   Carp: '0'
   Exporter: '0'
-  File::Spec: '0'
   File::Spec::Functions: '0'
   IO::File: '0'
-  IO::Handle: '0'
-  IPC::Open3: '0'
-  Module::Build: '0.28'
   Test::Exception: '0'
   Test::More: '0.88'
-  perl: '5.008'
   utf8: '0'
 configure_requires:
-  Module::Build: '0.28'
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.021, CPAN::Meta::Converter version 2.142690'
+generated_by: 'Dist::Zilla version 5.025, CPAN::Meta::Converter version 2.143240'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -28,7 +23,7 @@ name: PerlIO-utf8_strict
 provides:
   PerlIO::utf8_strict:
     file: lib/PerlIO/utf8_strict.pm
-    version: '0.005'
+    version: '0.006'
 requires:
   XSLoader: '0'
   perl: '5.008'
@@ -37,4 +32,7 @@ requires:
 resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=PerlIO-utf8_strict
   repository: git://github.com/Leont/perlio-utf8_strict.git
-version: '0.005'
+version: '0.006'
+x_contributors:
+  - 'chansen <chansen@cpan.org>'
+  - 'Leon Timmermans <fawaka@gmail.com>'
